--- a/src/style.css
+++ b/src/style.css
@@ -43,17 +43,43 @@ p{
     list-style-type: none;
     margin: 10px;
 }
-.container a, a:focus, a:active {
+ a, a:focus, a:active {
     text-decoration: none;
     color: rgb(96, 130, 208);
 font-weight: bold;
 }
-.container a:hover {
+ a:hover {
     text-decoration: none;
+    color: rgb(65, 93, 154);
+}
+
+button a{
     color: rgb(65, 93, 154);
 }
 
 footer{
     margin-top: 150px;
     color: rgb(99, 93, 84);
+}
+
+form{
+    margin: 25px;
+}
+
+.submit-btn{
+    background-color: #41B664;
+    border:none;
+    border-radius: 5px;
+padding:5px 20px 5px 20px ;
+color: white;
+font-weight: 700;
+}
+
+label{
+    margin-right: 15px;
+}
+input{
+    border-radius: 5px;
+    border:none;
+    padding: 5px;
 }
